refactor: se ajustan llamados estaticos